--- a/Killer App/Killer App.csproj
+++ b/Killer App/Killer App.csproj
@@ -88,6 +88,7 @@
     <Compile Include="ImportDialog.Designer.cs">
       <DependentUpon>ImportDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="MediaFile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Song.cs" />
