--- a/Killer App/Killer App.csproj
+++ b/Killer App/Killer App.csproj
@@ -74,6 +74,7 @@
       <DependentUpon>AddItemDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="Artist.cs" />
+    <Compile Include="Database.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
